--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,8 +191,10 @@ input, select, textarea {
 			width: max-content;
 			padding-bottom: 0.5rem;
 			margin: 0 0 2rem 0;
+			font-size: 1.5rem; /* Ajuste la taille du texte */
+			line-height: 1.4; /* Ajuste l'espacement entre les lignes */
+			letter-spacing: 0.05rem; /* Ajuste l'espacement des lettres */
 		}
-
 	h1 {
 		font-size: 2.25rem;
 		line-height: 1.3;
